2004-02-22 Kentaro Sato <kentaro@ranvis.com>

	* timidity/mac_a.c: Support 8/24-bit output and PF_BUFF_FRAGM_OPT.
	* timidity/aiff_a.c, timidity/smplfile.c: Fixed padding bug.

2004-02-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/instrum.c: Beautify and fix typo

2004-02-21  Saito <saito2@digitalme.com>

	* interface/w32g_pref.c:
	  Fix "force cfg reload".
	* timidity/sndfont.c:
	  Fix.
	* timidity/tables.[ch], timidity/mix.c:
	  Put together modulation envelope tables.

2004-02-20  Saito <saito2@digitalme.com>

	* interface/w32g_icon.ico, interface/w32g_res.{rc,h},
	  interface/w32g_i.c, interface/w32g_subwin.c,
	  interface/w32g_subwin2.c, interface/w32g_subwin3.c,
	  interface/w32g_syn.c:
	  Change icons.
	* interface/w32g_syn_icon.ico:
	  Add this file.

2004-02-19  Saito <saito2@digitalme.com>

	* timidity/tables.c:
	  Fix volume table of modulation envelope (incomplete).

2004-02-18 Kentaro Sato <kentaro@ranvis.com>

	* timidity/resample.c: Fixed noise of c-spline/lagrange/linear.

2004-02-18  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/playmidi.c, timidity/readmidi.c:
	  Clean up around chorus effect.
	  Fix bug of opt_pan_delay with opt_surround_chorus.
	  Rewrite DSP Chorus Effect.

2004-02-18  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Update
	* script/Makefile.{am.in}, script/lspatch.pl, script/readme.txt:
	  Add lspatch.pl (list the entire instrument configuration)
	* timidity/timidity.c (set_gus_patchconf_opts):
	  Change behavior of "note=" patch option

2004-02-17  Takashi Iwai <tiwai@suse.de>

	* interface/{alsaseq_c.c,gtk_i.c,ncurs_c.c,soundspec.c,tk_c.c,
	  x_wrdwindow.c}, libunimod/mloader.c, timidity/{aiff_a.c,alsa_a.c,
	  common.c,effect.c,freq.c,instrum.c,jack_a.c,mfi.c,mix.c,
	  mod2midi.c,oss_a.c,playmidi.c,rcp.c,readmidi.c,resample.c,
	  reverb.c,smplfile.c,tables.c,timidity.c,vorbis_a.c}:
	  Fix compile warnings with the recent gcc.
